--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ body {
 }
 
 .container {
-    border: 2px solid blac;
     height: 100%;
     display: grid;
     grid-template-rows: 40px 1fr 60px;
@@ -31,7 +30,6 @@ body {
 }
 
 .tablo {
-    border: 2px solid re;
     color: black;
     padding-left: 120px;
     padding-top: 3px;
@@ -51,7 +49,6 @@ body {
 }
 
 .button {
-    border: 2px solid blac;
     margin: 10px;
     background-color: white;
     display: flex;
@@ -71,7 +68,6 @@ body {
 }
 
 .download-box {
-    border: 2px solid re;
     grid-column: 5/6;
     margin: 0;
     padding: 0;
@@ -79,7 +75,6 @@ body {
 }
 
 .savebtn-box {
-    border: 2px solid re;
     grid-column: 6/7;
     margin: 0;
     padding: 0;
@@ -131,6 +126,15 @@ p {
     outline: none;
 }
 
+.count {
+    color: none;
+    display: none;
+}
+
+.count2 {
+    text-align: center;
+    padding-top: 10px;
+}
 
 textarea {
     resize: none;
