--- a/style.css
+++ b/style.css
@@ -22,9 +22,9 @@ body {
 
 .start-timer {
     background-color: rgb(9, 226, 9);
+    border: none;
     margin: 4px;
     text-align: center;
-    padding-top: 7px;
     cursor: pointer;
     grid-column: 2/3;
 }
@@ -101,8 +101,11 @@ p {
 .main {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    padding: 60px 200px;
-    gap: 200px;
+    grid-template-rows: 1fr 80px;
+    padding-left: 200px;
+    padding-right: 200px;
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
 
 .place {
@@ -112,10 +115,20 @@ p {
 
 #place1 {
     border: none;
+    margin-right: 100px;
+}
+
+#place2 {
+    margin-left: 100px;
 }
 
 #place3 {
     border: none;
+    margin-right: 100px;
+}
+
+#place4 {
+    margin-left: 100px;
 }
 
 #place1:focus {
@@ -134,6 +147,9 @@ p {
 .count2 {
     text-align: center;
     padding-top: 10px;
+    grid-row: 2/3;
+    grid-column: 2/3;
+    padding-right: 400px;
 }
 
 textarea {
