--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ p {
     padding-right: 100px;
     padding-top: 60px;
     padding-bottom: 60px;
+    background-color: rgb(243, 234, 234);
 }
 
 .place {
@@ -118,17 +119,9 @@ p {
     margin-right: 100px;
 }
 
-#place2 {
-    /* margin-left: 100px; */
-}
-
 #place3 {
     border: none;
     margin-right: 100px;
-}
-
-#place4 {
-    /* margin-left: 100px; */
 }
 
 #place1:focus {
